<resources>
    <!-- App Name -->
    <string name="app_name">Jobs</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button">Settings</string>

    <!-- New String Values -->
    <string name="register_header">Create Account</string>
    <string name="email_hint"> Email</string>
    <string name="phone_hint"> Phone</string>
    <string name="password_hint"> Password</string>
    <string name="confirm_password_hint"> Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="login_textView_text"> Have an account? Log in</string>
    <string name="login_button">Login</string>
    <string name="register_textView_text"> Don\'t have account? Register</string>
    <string name="main_activity_actionBar_header">Jobs</string>
    <string name="new_job_actionBar_header">Create Job</string>
    <string name="job_title_hint"> Job Title</string>
    <string name="job_description_hint"> Maximum 240 character description</string>
    <string name="add_new_job_text">Add new Job</string>
    <string name="job_budget_hint"> Job Budget</string>
    <string name="add_new_job_header_text">New Job</string>
    <string name="full_name_hint">Full Name</string>
    <string name="action_search">Search</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_new_job">New Job</string>
    <string name="title_activity_job_details">Job Details</string>
    <string name="bid">Bid</string>
    <string name="job_budget">Job Budget</string>
    <string name="job_description">Job Description</string>
    <string name="job_title">Job Title</string>
    <string name="pay_via_mpesa">Pay Via Mpesa</string>
    <string name="amount_to_pay">Amount To Pay</string>
    <string name="phone_number">Phone Number</string>
</resources>
