<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/padding16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:text="@string/register_header"
            android:padding="@dimen/padding16dp"
            android:textStyle="bold"
            android:id="@+id/register_header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

             <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding16dp"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding16dp"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding16dp"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_confirm_password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding16dp"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:padding="@dimen/padding16dp"
            android:layout_margin="@dimen/margin4dp"
            android:text="@string/register_button_text"
            android:background="@color/blueGrey900"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/login_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/login_textView_text"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:padding="@dimen/padding16dp"
            android:layout_margin="@dimen/margin4dp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>