<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.NewJob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/add_new_job_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:padding="@dimen/padding16dp"
            android:layout_margin="@dimen/margin4dp"
            android:text="@string/add_new_job_header_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/job_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/job_title_hint"
                android:padding="@dimen/padding16dp"
                android:maxLines="1"
                android:maxEms="50"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/job_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/job_description_hint"
                android:padding="@dimen/padding16dp"
                android:maxLines="10"
                android:maxEms="@integer/job_max_ems"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="text|textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/job_budget"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:gravity="start"
                android:hint="@string/job_budget_hint"
                android:padding="@dimen/padding16dp"
                android:maxLines="1"
                android:maxEms="@integer/job_max_ems"
                android:layout_margin="@dimen/margin4dp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_new_job_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_job_text"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@color/blueGrey900"
            android:padding="@dimen/padding16dp"
            android:layout_margin="@dimen/margin4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>