<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LipaNaMpesa">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="@dimen/textSize18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPhone"
            android:layout_margin="@dimen/padding8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/amount_to_pay"
            android:inputType="number"
            android:textSize="@dimen/textSize18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            tools:layout_editor_absoluteY="71dp" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAmount"
            android:layout_margin="@dimen/padding8dp"
            android:background="@color/blueGrey900"
            android:gravity="center"
            android:text="@string/pay_via_mpesa"
            android:textAllCaps="false"
            android:textColor="@color/whiteTheme"
            android:textSize="@dimen/textSize18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>