<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/padding16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="Login"
            android:padding="@dimen/padding16dp"
            android:id="@+id/login_header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress"
                android:gravity="start"
                android:layout_gravity="center"
                android:hint="@string/email_hint"
                android:padding="@dimen/padding16dp"
                android:layout_margin="@dimen/margin4dp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:id="@+id/password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="start"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:hint="@string/password_hint"
                android:padding="@dimen/padding16dp"
                android:layout_margin="@dimen/margin4dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:padding="@dimen/padding16dp"
            android:layout_margin="@dimen/margin4dp"/>

        <TextView
            android:id="@+id/register_textView_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/register_textView_text"
            android:layout_gravity="center"
            android:padding="@dimen/padding16dp"
            android:layout_margin="@dimen/margin4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>